crates/oxc_react_compiler/tests/snapshots/target-flag-meta-internal.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/target-flag-meta-internal.js
---
import { c as _c } from "react/compiler-runtime";
// @target:"donotuse_meta_internal"
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>Hello world</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: true
};
