crates/oxc_react_compiler/tests/snapshots/template-literal.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/template-literal.js
---
function componentA(props) {
	let t = `hello ${props.a}, ${props.b}!`;
	t = t + "";
	return t;
}
function componentB(props) {
	const x = useFoo(`hello ${props.a}`);
	return x;
}
