crates/oxc_react_compiler/tests/snapshots/temporary-at-start-of-value-block.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/temporary-at-start-of-value-block.js
---
import { c as _c } from "react/compiler-runtime";
function component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		t0 = isMenuShown ? <Bar> {props.a ? props.b : props.c}</Bar> : null;
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	return x;
}
