crates/oxc_react_compiler/tests/snapshots/ternary-assignment-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ternary-assignment-expression.js
---
function ternary(props) {
	let x;
	const y = props.a ? x = 1 : x = 2;
	return x + y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: ternary,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
