crates/oxc_react_compiler/tests/snapshots/ternary-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ternary-expression.js
---
function ternary(props) {
	const a = props.a && props.b ? props.c || props.d : props.e ?? props.f;
	const b = props.a ? props.b && props.c ? props.d : props.e : props.f;
	return a ? b : null;
}
export const FIXTURE_ENTRYPOINT = {
	fn: ternary,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
