crates/oxc_react_compiler/tests/snapshots/todo-function-expression-captures-value-later-frozen.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/todo-function-expression-captures-value-later-frozen.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.cond) {
		const x = {};
		const onChange = (e) => {
			maybeMutate(x, e.target.value);
		};
		if (props.cond) {}
		onChange();
		t0 = <Foo value={x} />;
		$[0] = props.cond;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
